--- a/package.json
+++ b/package.json
@@ -7,24 +7,34 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "reset:db": "neon branches reset dev/zander",
     "inngest": "inngest-cli dev --no-discovery --poll-interval 180 -u http://localhost:3000/api/inngest"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^6.3.1",
+    "@prisma/client": "^6.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "inngest": "^3.31.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
+    "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.14",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "inngest-cli": "^1.4.6",
