--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "inngest": "inngest-cli dev --no-discovery --poll-interval 180 -u http://localhost:3000/api/inngest",
+    "postinstall": "prisma generate",
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:generate": "prisma generate",
-    "reset:db": "neon branches reset dev/zander",
-    "inngest": "inngest-cli dev --no-discovery --poll-interval 180 -u http://localhost:3000/api/inngest"
+    "reset:db": "neon branches reset dev/zander"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
