--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "inngest": "^3.31.7",
     "lucide-react": "^0.475.0",
+    "md5": "^2.3.0",
     "next": "15.1.0",
     "prisma": "^6.3.1",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/md5": "^2.3.5",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
