--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "inngest": "inngest-cli dev --no-discovery --poll-interval 180 -u http://localhost:3000/api/inngest",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma migrate dev",
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:generate": "prisma generate",
     "reset:db": "neon branches reset dev/zander"
