--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/adapter-neon": "^6.3.1",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "ai": "^4.1.36",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.475.0",
     "md5": "^2.3.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
